mi primer commit

--- a/corporativaTerranova/templates/inicio.html
+++ b/corporativaTerranova/templates/inicio.html
@@ -7,7 +7,64 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <header class="header">
+        <div class="menu container">
+            <a href="#" class="logo">Logo</a>
+            <label for="manu">
+                <img src="" class="menu-icono" alt="">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Servicios</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-content container">
+            <h1>Coffe House</h1>
+            <p>
+
+            </p>
+            <a href="#" class="btn-1">Información</a>
+        </div>
+    </header>
+    <section>
+        <img class="coffee-img" src="" alt="">
+        <div class="coffee-content container">
+            <h2>Los diferentes tipos de cafe</h2>
+            <p class="txt-p">
+                aqui es un texto
+            </p>
+            <div class="coffee-group">
+                <div class="coffe-1">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p>aqui va texto</p>
+                </div>
+                <div class="coffe-1">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p>aqui va texto</p>
+                </div>
+                <div class="coffe-1">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p>aqui va texto</p>
+                </div>
+            </div>
+            <a href="#" class="btn-1">Información</a>
+        </div>
+    </section>
+    <main class="services">
+        <div class="services-content container">
+            <h2>Cafeteria Servicios</h2>
+            <div class="service-group">
+                <div></div>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
